--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "assert": "^2.0.0",
+    "exifr": "^7.1.3",
     "http-proxy-middleware": "^2.0.6",
     "https-browserify": "^1.0.0",
     "os-browserify": "^0.3.0",
